--- a/index.html
+++ b/index.html
@@ -491,9 +491,10 @@
         }, 2400); // 三行依次淡入后再出现提示
     }
 
-    // endingScreen 点击逻辑
-    endingScreen.addEventListener('click', function (e) {
-        if (e.target.tagName === 'BUTTON') return;
+    // endingScreen 点击 / 触摸 逻辑（兼容移动端）
+    function handleEndingOverlayTap(e) {
+        // 按钮自己的点击事件单独处理，这里只关心空白区域 / 文本点击
+        if (e && e.target && e.target.tagName === 'BUTTON') return;
 
         if (endingMode === 'normal') {
             // 再点击一次，显示两个按钮
@@ -504,7 +505,14 @@
             // 专家模式通关：点击任意位置回到封面
             gotoTitle();
         }
-    });
+    }
+
+    endingScreen.addEventListener('click', handleEndingOverlayTap);
+    endingScreen.addEventListener('touchstart', function (e) {
+        // 防止移动端 touchstart 不触发 click 的情况
+        e.preventDefault();
+        handleEndingOverlayTap(e);
+    }, { passive: false });
 
     endingBtnExpert.addEventListener('click', function (e) {
         e.stopPropagation();
