--- a/index.html
+++ b/index.html
@@ -469,13 +469,6 @@
 
         endingLines.innerHTML =
             '<div class="ending-line fade-in-slow">你成功击退了典狱长格赫罗斯</div>';
-
-        // 移动端兼容：通关文字出现后，自动显示两个按钮
-        setTimeout(function () {
-            if (endingMode === 'normal') {
-                endingButtons.classList.remove('hidden');
-            }
-        }, 800);
     }
 
     // 通关画面：专家模式
@@ -498,19 +491,27 @@
         }, 2400); // 三行依次淡入后再出现提示
     }
 
-    // endingScreen 点击逻辑（简化版）
-    // 普通模式：按钮会在 showNormalEnding 里自动出现，这里不用管
-    // 专家模式：点击任意位置回到封面
-    endingScreen.addEventListener('click', function (e) {
-        if (endingMode === 'expert') {
+    // endingScreen 点击 / 触摸 逻辑（兼容移动端）
+    function handleEndingOverlayTap(e) {
+        // 按钮自己的点击事件单独处理，这里只关心空白区域 / 文本点击
+        if (e && e.target && e.target.tagName === 'BUTTON') return;
+
+        if (endingMode === 'normal') {
+            // 再点击一次，显示两个按钮
+            if (endingButtons.classList.contains('hidden')) {
+                endingButtons.classList.remove('hidden');
+            }
+        } else if (endingMode === 'expert') {
+            // 专家模式通关：点击任意位置回到封面
             gotoTitle();
         }
-    });
-    endingScreen.addEventListener('touchend', function (e) {
-        if (endingMode === 'expert') {
-            e.preventDefault();
-            gotoTitle();
-        }
+    }
+
+    endingScreen.addEventListener('click', handleEndingOverlayTap);
+    endingScreen.addEventListener('touchstart', function (e) {
+        // 防止移动端 touchstart 不触发 click 的情况
+        e.preventDefault();
+        handleEndingOverlayTap(e);
     }, { passive: false });
 
     endingBtnExpert.addEventListener('click', function (e) {
@@ -525,7 +526,10 @@
         gotoTitle();
     });
 
-    function update() {imer > 0) boss.flashTimer--;
+    function update() {
+        if (shake > 0) shake--;
+        if (flash > 0) flash--;
+        if (boss.flashTimer > 0) boss.flashTimer--;
         if (boss.recoil > 0) boss.recoil *= 0.8;
         if (Math.abs(boss.recoil) < 0.5) boss.recoil = 0;
         if (dodgeAnim !== 0) dodgeAnim *= 0.8;
